--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-app-rewired": "^2.0.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.0-next.3e165448",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
